--- a/docker-compose.dist.yml
+++ b/docker-compose.dist.yml
@@ -1,8 +1,11 @@
 version: "3.9"
 
 services:
+
   toxic-ml:
     build: .
+    environment:
+      - LABEL_STUDIO_USE_REDIS=true
     volumes:
       - ~/.cache/huggingface:/root/.cache/huggingface
     ports:
