--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==2.3.2
+#flask==2.3.2
+fastapi==0.101.1
 transformers==4.31.0
 torch==2.0.1
+label-studio-tools==0.0.2
+uvicorn==0.23.2
+pydantic==2.2.1
