--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-#flask==2.3.2
-fastapi==0.101.1
+flask==1.1.2
 transformers==4.31.0
 torch==2.0.1
-label-studio-tools==0.0.2
-uvicorn==0.23.2
-pydantic==2.2.1
+gunicorn==20.1.0
+label-studio-sdk==0.0.30
+label-studio-ml==1.0.9
+rq==1.15.1
